# StudioFury

./: README.md  README_EN.md  VERSION  __init__.py  nodes.py  pyproject.toml
Interface/js/: sf_refresh.js
core/: sf_io.py
dataset/: SF_AddEntity.py  SF_ProjectManager.py  SF_SmartSaver.py
director/: SF_ActionAnimator.py  SF_AssetLoader.py  SF_DirectorEngine.py  SF_GenerativeFusion.py  SF_SceneComposer.py  SF_SceneComposerV2.py
interface/js/: embeddingsselector.js  sf_tools.js
prompts/: AdvancedPrompt.py  EmbeddingsSelector.py  SF_AdvancedPrompt.py  SF_EmbeddingsSelector.py
prompts/js/: EmbeddingsSelector.js
utils/: sf_lang.py
