[project]
name = "studio-fury"
description = "Nodos custom, al estilo fury, nodos que añaden versatilidad. con el tiempo ira creciendo los nodos."
version = "1.2.7"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/FuryNocturn/ComfyUI-Studio-Fury"
Documentation = "https://github.com/FuryNocturn/ComfyUI-Studio-Fury/wiki"
"Bug Tracker" = "https://github.com/FuryNocturn/ComfyUI-Studio-Fury/issues"

[tool.comfy]
PublisherId = "furynocturntv"
DisplayName = "StudioFury"
Icon = "https://github.com/FuryNocturn/ComfyUI-Studio-Fury/blob/master/ico/ICO.png"
Banner = "https://github.com/FuryNocturn/ComfyUI-Studio-Fury/blob/master/ico/Banner.png"
